[package]
name = "core"
version = "0.1.0"
authors = ["Amirhossein Sadeghi <sadeghi.ah79@gmail.com>"]
edition = "2022"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
tiny-bip39 = "1.0.0"
crypto_box = "0.8.2"
bs58 = "0.4.0"
tiny-hderive = "0.3.0"
ed25519-dalek = "1.0.1"
getrandom = { version = "0.2.8", features = ["js"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
